--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -17,42 +17,54 @@
     transition: all 0.2s ease-in-out;
 }
 
-.number{
-    color: #89CFF0;
-}
-
 .link{
-    color: red;
     margin-right: 1rem;
 }
 
 .link:hover{
-    color: #89CFF0;
+    color: var(--baby-blue);
+}
+
+.social-icon{
+    margin-left: 2rem;
+    font-size: 20px;
+    transition: 0.5s;
+}
+
+.social-icon:hover{
+    color: var(--baby-blue);
+    transform: translateY(-5px);
 }
 
 #logo{
     margin-left: 2.5rem;
     margin-top: 10px;
     margin-bottom: 10px;
-    /* margin: 10px; */
+    height: 45px;
+    width: auto;
+    transition: 0.3s;
+}
+
+#logo:hover{
+    height: 55px;
 }
 
 #resume{
-    border: 2px solid #89CFF0;
+    border: 2px solid var(--baby-blue);
     border-radius: 5px;
     margin-right: 2rem;
     padding-left: 10px;
     padding-right: 10px;
-    color: #89CFF0;
+    color: var(--baby-blue);
     width: fit-content;
 }
 
 #resume:hover{
-    background-color: rgba(137, 207, 240, 0.3);
+    background-color: var(--baby-blue-transparent);
 }
 
 nav{
-    background-color: rgba(0, 54, 51, 0.5);
+    background-color: var(--dark-navy-transparent)
 }
 
 @media only screen and (max-width: 500px) {
@@ -60,5 +72,7 @@ nav{
         margin-left: 1rem;
     }
 
-   
+    nav{
+        background-color: var(--dark-navy);
+    }
 }
