--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -2,59 +2,9 @@
 
 body{
     background-color: rgb(0, 4, 49);
+    margin-left: 15%;
 }
 
-.name{
-    font-size: 60px;
-    font-weight: bold;
-    color: white;
-    margin-top: 100px;
-    margin-left: 25%;
-}
-
-.slogan{
-    font-size: 60px;
-    font-weight: bold;
-    color: rgb(200, 200, 200);
-}
-
-.my-margin{
-    margin-left: 20%;
-    font-family: 'Poppins', sans-serif;
-}
-
-
-
-.description{
-    color: gray;
-}
-
-.github-link{
-    text-decoration: none;
-    border: 2px solid #89CFF0;
-    border-radius: 5px;
-    padding: 15px;
-    color: #89CFF0;
-    transition: 0.3s;
-}
-
-.github-link:hover{
-    background-color: rgba(137, 207, 240, 0.3);
-    color: #89CFF0;
-}
-
-@media only screen and (max-width: 360px) {
-    .my-margin{
-        margin-left: 5%;
-    }
-
-    .name, .slogan{
-        font-size: 35px;
-        font-weight: bold;
-    }
-
-    .description{
-        margin-right: 1%;
-        overflow-wrap: break-word;
-    }
+.number{
+    color: var(--baby-blue);
 }
