--- a/src/components/SectionDivider/SectionDivider.css
+++ b/src/components/SectionDivider/SectionDivider.css
@@ -2,7 +2,7 @@
     width: 64px;
     height: 6px;
     border-radius: 10px;
-    background-color: var(--baby-blue);
+    background-color: var(--primary);
     margin-top: 4rem;
     margin-bottom: 4rem;
 }
