--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,7 +1,11 @@
+#hero-section{
+    margin-left: 15%;
+}
+
 .hi{
     font-size: 20px;
     font-weight: bold;
-    color: var(--baby-blue);    
+    color: var(--primary);    
     margin-top: 100px;
 
 }
@@ -26,16 +30,16 @@
 
 .github-link{
     text-decoration: none;
-    border: 3px solid var(--baby-blue);
+    border: 3px solid var(--primary);
     border-radius: 5px;
     padding: 15px;
-    color: var(--baby-blue);
+    color: var(--primary);
     transition: 0.3s;
 }
 
 .github-link:hover{
-    background-color: var(--baby-blue-transparent);
-    color: var(--baby-blue);
+    background-color: var(--primary-transparent);
+    color: var(--primary);
 }
 
 @media only screen and (max-width: 450px) {
