--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -22,7 +22,7 @@
 }
 
 .link:hover{
-    color: var(--baby-blue);
+    color: var(--primary);
 }
 
 .social-icon{
@@ -32,7 +32,7 @@
 }
 
 .social-icon:hover{
-    color: var(--baby-blue);
+    color: var(--primary);
     transform: translateY(-5px);
 }
 
@@ -50,21 +50,21 @@
 }
 
 #resume{
-    border: 2px solid var(--baby-blue);
+    border: 2px solid var(--primary);
     border-radius: 5px;
     margin-right: 2rem;
     padding-left: 10px;
     padding-right: 10px;
-    color: var(--baby-blue);
+    color: var(--primary);
     width: fit-content;
 }
 
 #resume:hover{
-    background-color: var(--baby-blue-transparent);
+    background-color: var(--primary-transparent);
 }
 
 nav{
-    background-color: var(--dark-navy-transparent)
+    background-color: var(--secondary-transparent)
 }
 
 @media only screen and (max-width: 991px) {
@@ -77,6 +77,6 @@ nav{
     }
 
     nav{
-        background-color: var(--dark-navy);
+        background-color: var(--secondary);
     }
 }
