--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,16 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 body{
-    background-color: rgb(0, 4, 49);
-    margin-left: 15%;
+    background-color: var(--secondary);
 }
 
 .number{
-    color: var(--baby-blue);
+    color: var(--primary);
 }
 
 @media only screen and (max-width: 450px){
-    body{
+    /* body{
         margin-left: 5%;
-    }
+    } */
 }
