--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root{
-    --primary: #64f7ff;
+    --primary: #ff64b1;
     --primary-transparent: rgba(137, 207, 240, 0.3);
     --secondary: rgb(0, 4, 49);
     --secondary-transparent: rgba(0, 4, 49, 0.96);
