--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -5,7 +5,7 @@
     align-items: center;
     margin-left: 15%;
     margin-bottom: 25px;
-    border: 2px solid white;
+    border: 2px solid var(--primary);
 }
 
 .card-wrapper-left{
