--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,15 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 
 body{
     background-color: var(--secondary);
+    font-family: 'Open Sans', sans-serif;
 }
 
 .number{
     color: var(--primary);
-}
-
-@media only screen and (max-width: 450px){
-    /* body{
-        margin-left: 5%;
-    } */
 }
