--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,11 +1,10 @@
-
 .card-wrapper{
     display: grid;
-    width: 80vw;
+    width: 85vw;
     height: 350px;
     align-items: center;
     margin: auto;
-    margin-bottom: 25px;
+    margin-bottom: 50px;
     /* border: 2px solid var(--primary); */
 }
 
@@ -30,8 +29,6 @@
     height: 100%;
     width: 100%;
 }
-
-
 
 .card-description > .project-header{
     display: grid;
@@ -109,8 +106,8 @@
 @media only screen and (max-width: 700px){
     .card-wrapper{
         grid-template-columns: none;
-        grid-template-rows: 40% auto;
-        height: 500px;
+        grid-template-rows: 50% auto;
+        height: 400px;
     }
 
     .card-picture{
@@ -125,6 +122,14 @@
         height: 100%;
         box-shadow: none;
     }
+
+    .card-wrapper-left > .card-description,  .card-wrapper-right > .card-description{
+        border-radius: 0px;
+    }
+
+    /* .card-wrapper-right > .card-description{
+        border-radius: 0px;
+    } */
 }
 
 @media only screen and (max-width: 400px){
@@ -137,7 +142,7 @@
         height: 500px;
     }
 
-     .card-description{
+    .card-description{
         height: 100%;
         overflow-y: scroll;
     }
