--- a/src/components/SectionDivider/SectionDivider.css
+++ b/src/components/SectionDivider/SectionDivider.css
@@ -3,8 +3,8 @@
     height: 6px;
     border-radius: 10px;
     background-color: var(--primary);
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+    margin-top: 60px;
+    margin-bottom: 60px;
 }
 
 .margin{
