mostly finished! Works on all platforms

--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,6 @@
     --primary-transparent: rgba(137, 207, 240, 0.3);
     --secondary: rgb(0, 4, 49);
     --secondary-transparent: rgba(0, 4, 49, 0.96);
+    --cool-grey: rgb(190, 190, 190);
+    --navy: rgb(0, 11, 49);
 }
