--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,31 +1,39 @@
-#hero-section{
-    margin-left: 15%;
-}
-
 .hi{
     font-size: 20px;
     font-weight: bold;
     color: var(--primary);    
+    margin: auto;    
     margin-top: 100px;
-
+    width: fit-content;
 }
 
 .name{
-    font-size: 60px;
+    font-size: 35px;
     font-weight: bold;
     color: white;
+    margin: auto;
+    width: fit-content;
 }
 
 .slogan{
-    font-size: 60px;
+    font-size: 30px;
     font-weight: bold;
     color: rgb(200, 200, 200);
+    margin: auto;
+    width: fit-content;
 }
 
 .description{
     color: gray;
-    width: 50vw;
-    overflow-wrap: break-word;
+    width: 90vw;
+    /* overflow-wrap: break-word; */
+    margin: auto;
+}
+
+.github-link-wrapper{
+    margin: auto;
+    margin-top: 2rem;
+    width: fit-content;
 }
 
 .github-link{
@@ -42,13 +50,49 @@
     color: var(--primary);
 }
 
-@media only screen and (max-width: 450px) {
-    .name, .slogan{
-        font-size: 35px;
-        font-weight: bold;
+@media only screen and (min-width: 768px){
+
+}
+
+@media only screen and (min-width: 992px){
+    .hi{
+        font-size: 30px;   
+    }
+
+    .name{
+        font-size: 50px;
+    }
+
+    .slogan{
+        font-size: 50px;
     }
 
     .description{
-        width: 90vw;
+        width: 60vw;
+        font-size: 20px;
+    }
+}
+
+@media only screen and (min-width: 1400px){
+    .hi{
+        font-size: 50px; 
+        margin-top: 150px;  
+    }
+
+    .name{
+        font-size: 70px;
+    }
+
+    .slogan{
+        font-size: 70px;
+    }
+
+    .description{
+        font-size: 30px;
+    }
+
+    .github-link{
+        font-size: 30px;
+        border: 4px solid var(--primary);
     }
 }
