--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,37 +1,40 @@
 .card-wrapper{
     display: grid;
-    width: 85vw;
-    height: 350px;
     align-items: center;
+
     margin: auto;
-    margin-bottom: 50px;
-    /* border: 2px solid var(--primary); */
+    margin-bottom: 60px;
+    width: 95vw;
+    border: 2px solid var(--primary);
+    border-radius: 15px;
+}
+
+.card-description{
+    display: grid;
+    height: fit-content;
+    overflow-y: scroll;
+}
+
+.card-picture{
+    height: 200px;
+    transition: 0.3s;
+}
+
+.card-picture > img{
+    height: 100%;
+    width: 100%;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
 
 .card-wrapper:hover{
     cursor: pointer;
 }
 
-.card-picture{
-    height: 100%;
-    transition: 0.3s;
-}
-
-.card-description{
-    display: grid;
-    height: 80%;
-    border: 2px var(--primary) solid;
-    transition: 0.3s;
-    overflow-y: scroll;
-}
-
-.card-picture > img{
-    height: 100%;
-    width: 100%;
-}
 
 .card-description > .project-header{
     display: grid;
+    padding: 15px;
     /* border: 2px solid firebrick; */
 }
 
@@ -39,6 +42,7 @@
     font-size: 30px;
     font-weight: bold;
     margin: auto;
+    margin-bottom: 10px;
     color: var(--primary);
 }
 
@@ -57,8 +61,10 @@
 }
 
 .card-description > .project-description > p{
-    width: 80%;
+    width: fit-content;
     margin: auto;
+    padding: 15px 10px;
+    /* border: darkorange 2px solid; */
 }
 
 .card-description > .stack{
@@ -84,6 +90,7 @@
 .card-description > .project-link{
     display: grid;
     /* border: lightcoral 2px solid; */
+    padding: 15px 0px;
     color: var(--primary);
 }
 
@@ -98,56 +105,55 @@
     transition: 0.3s;
 }
 
-.card-description > .project-link > a:hover{
-    transform: translateY(-5px);
-    background-color: var(--primary-transparent);
-}
 
-@media only screen and (max-width: 700px){
-    .card-wrapper{
-        grid-template-columns: none;
-        grid-template-rows: 50% auto;
-        height: 400px;
-    }
-
+@media only screen and (min-width: 768px){
     .card-picture{
         height: 100%;
     }
-
-    .card-description{
-        height: 100%;
+    
+    .card-description > .project-technologies{
+        gap: 9px;
     }
-
-    .card-wrapper:hover > .card-picture{
-        height: 100%;
-        box-shadow: none;
-    }
-
-    .card-wrapper-left > .card-description,  .card-wrapper-right > .card-description{
-        border-radius: 0px;
-    }
-
-    /* .card-wrapper-right > .card-description{
-        border-radius: 0px;
-    } */
 }
 
-@media only screen and (max-width: 400px){
+@media only screen and (min-width: 992px){
     .card-wrapper{
-        grid-template-columns: none;
-        grid-template-rows: 40% auto;
-        margin: auto;
-        margin-bottom: 40px;
-        width: 95%;
-        height: 500px;
+        border: none;
+        height: 400px;
     }
 
     .card-description{
-        height: 100%;
-        overflow-y: scroll;
+        height: 80%;
+        border: var(--primary) 2px solid;
+        transition: 0.3s;
+    }
+   
+    .card-description > .project-link > a:hover{
+        transform: translateY(-5px);
+        background-color: var(--primary-transparent);
     }
 
-    .card-picture:hover{
-        height: 100%;
+}
+
+@media only screen and (min-width: 1300px){
+    .card-wrapper{
+        margin-bottom: 200px;
+    }
+
+    .card-description > .project-technologies{
+        gap: 20px;
+    }
+
+    .card-description > .project-header > p{
+        font-size: 40px;
+    }
+
+    .card-description > .project-description > p, .stack, .project-technologies{
+        font-size: 25px;
+    }
+
+    .card-description > .project-link > a{
+        font-size: 25px;
+        border: 4px solid var(--primary);
     }
 }
