--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,5 +1,12 @@
 #project-section > .project-header{
-    margin-left: 15%;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
+    margin: auto;
+    width: fit-content;
+}
+
+@media only screen and (min-width: 1300px) {
+    #project-section > .project-header{
+        font-size: 60px;
+    }
 }
