--- a/src/components/Technologies/Technologies.css
+++ b/src/components/Technologies/Technologies.css
@@ -1,45 +1,54 @@
 #technologies-section > .technologies-header{
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;  
-    margin-left: 15%;
+    margin: auto;
+    width: fit-content;
 }
 
 #technologies-section > .technologies{
     display: grid;
-    gap: 40px;
-    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    grid-template-rows: repeat(3, 1fr);
     margin: auto;
-    width: 75vw;
+    width: 85vw;
 }
 
 #technologies-section > p{
-    margin-left: 15%;
+    margin: auto;
     color: gray;
-    width: 65vw;
+    width: 80vw;
     overflow-wrap: break-word;
 }
 
-@media only screen and (max-width: 900px){
+
+@media only screen and (min-width: 768px){
     #technologies-section > .technologies{
+        grid-template-rows: none;
+        grid-template-columns: repeat(3, 1fr);
         width: 95vw;
         gap: 0px;
     }
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (min-width: 992px){
     #technologies-section > .technologies{
-        grid-template-columns: none;
-        grid-template-rows: 1fr 1fr 1fr;
         width: 80vw;
-        gap: 20px;
+        gap: 30px;
     }
+}
 
-    #technologies-section > p{
-        width: 95vw;
-        margin: auto;
+@media only screen and (min-width: 1400px){
+    #technologies-section > .technologies{
+        gap: 50px;
+        width: 85vw;
     }
 
     #technologies-section > .technologies-header{
-        margin-left: 5%;
+        font-size: 60px;
+    }
+
+    #technologies-section > p{
+        width: fit-content;
+        font-size: 30px;
     }
 }
