--- a/src/components/OldProjectCard/OldProjectCardPicLeft.css
+++ b/src/components/OldProjectCard/OldProjectCardPicLeft.css
@@ -1,11 +1,11 @@
 @media only screen and (min-width: 768px){
-    .card-wrapper-left{
+    /* .card-wrapper-left{
         grid-template-columns: 60% auto;
-    }
+    } */
 
     .card-wrapper-left > .card-picture > img{
-        border-top-right-radius: 0px;
-        border-bottom-left-radius: 15px;
+        border-top-right-radius: 15px;
+        border-bottom-left-radius: 0px;
     }
 }
 
