--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,159 +1,214 @@
-.card-wrapper{
+.project_card{
     display: grid;
-    align-items: center;
-
-    margin: auto;
-    margin-bottom: 60px;
-    width: 95vw;
-    border: 2px solid var(--primary);
+    grid-template-areas: "picture" "description";
+    width: 90vw;
+    /* border: 1px solid var(--primary); */
     border-radius: 15px;
-}
-
-.card-description{
-    display: grid;
-    height: fit-content;
-    overflow-y: scroll;
-}
-
-.card-picture{
-    height: 200px;
+    margin: auto;
+    margin-bottom: 80px;
     transition: 0.3s;
 }
 
-.card-picture > img{
-    height: 100%;
-    width: 100%;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-}
+/* Styling for description */
 
-.card-wrapper:hover{
-    cursor: pointer;
-}
-
-
-.card-description > .project-header{
+.project_card > .project_description_div{
     display: grid;
+    grid-area: description;
+    background-color: var(--navy-light);
+}
+
+/* .project_card > .project_description_div > div{
+    border: 1px solid white;
+} */
+
+.project_card > .project_description_div > .project_description{
+    color: var(--primary);
     padding: 15px;
-    /* border: 2px solid firebrick; */
-}
-
-.card-description > .project-header > p{
-    font-size: 30px;
-    font-weight: bold;
-    margin: auto;
-    margin-bottom: 10px;
-    color: var(--primary);
-}
-
-.card-description > .project-header > .project-divider{
-    width: 64px;
-    height: 4px;
-    border-radius: 10px;
-    background-color: var(--primary);
-    margin: auto;
-}
-
-.card-description > .project-description{
-    display: grid;
-    color: var(--primary);
-    /* border: 2px solid khaki; */
-}
-
-.card-description > .project-description > p{
-    width: fit-content;
-    margin: auto;
-    padding: 15px 10px;
-    /* border: darkorange 2px solid; */
-}
-
-.card-description > .stack{
-    font-weight: bold;
-    color: var(--primary);
-    margin: auto;
-    height: fit-content;
-    width: fit-content;
-    /* border: violet 2px solid; */
-}
-
-.card-description > .project-technologies{
-    display: inline-flex;
-    flex-wrap: wrap;
-    gap: 12px;
-    width: fit-content;
-    /* border: 2px solid white; */
-    color: var(--primary);
-    margin: auto;
     /* height: fit-content; */
+    /* border: 2px red solid; */
 }
 
-.card-description > .project-link{
+.project_card > .project_description_div > .project_title_wrapper{
+    display: flex;
+    justify-content: space-between;
+    /* border: 2px yellow solid; */
+}
+
+.project_card > .project_description_div > .project_title_wrapper > .project_title > .project_title_text{
     display: grid;
-    /* border: lightcoral 2px solid; */
-    padding: 15px 0px;
+    place-items: center;
+   
     color: var(--primary);
+    font-size: 22px;
+    font-weight: bold;
+    padding: 0px 10px;
+    height: 100%;
 }
 
-.card-description > .project-link > a{
+.project_card > .project_description_div > .project_title_wrapper > .project_links_wrapper{
+    /* border: 2px solid salmon; */
+    padding: 0px 8px;
+    width: 30%;
+
+    display: flex;
+    /* align-items: center; */
+    justify-content: space-between;
+}
+
+.project_card > .project_description_div > .project_title_wrapper > .project_links_wrapper > a{
+    /* border: 2px solid red; */
+    height: 100%;
     padding: 10px;
-    margin: auto;
-    border: solid 2px var(--primary);
-    text-decoration: none;
-    border-radius: 10px;
-    color: var(--primary);
-    background-color: transparent;
-    transition: 0.3s;
 }
 
+.project_card > .project_description_div > .project_title_wrapper > .project_links_wrapper > a > .project_link{
+    color: white;
+    font-size: 25px;
+    transition: 0.5s;
 
-@media only screen and (min-width: 768px){
-    .card-picture{
-        height: 100%;
+    height: 100%;
+}
+
+.project_card > .project_description_div > .project_title_wrapper > .project_links_wrapper > a > .project_link:hover{
+    cursor: pointer;
+    color: var(--primary);
+}
+
+/* Styling for tech stack */
+.project_card > .project_description_div > .tech_stack_wrapper > .tech_stack{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 10px 0px;
+
+    color: var(--primary);
+    height: 100%;
+    font-weight: bold;
+    font-size: 18px;
+    margin: 0px 10px;
+    gap: 10px;
+}
+
+/* Styling for tablets */
+@media screen and (min-width: 768px) {
+    .project_card > .project_description_div > .project_title_wrapper > .project_links_wrapper{
+        padding: 0px 25px;
+    }
+
+    .project_card > .project_description_div > .project_title_wrapper > .project_links_wrapper > a > .project_link{
+        font-size: 50px;
+    }
+
+    .project_card > .project_description_div > .project_title_wrapper > .project_title > .project_title_text{
+        font-size: 50px;
     }
     
-    .card-description > .project-technologies{
-        gap: 9px;
+    .project_card > .project_description_div > .project_description{
+        font-size: 30px;
+    }
+
+    .project_card > .project_description_div > .tech_stack_wrapper > .tech_stack{
+        font-size: 35px;
+        font-weight: normal;
+
+        margin: 0px 20px;
     }
 }
 
-@media only screen and (min-width: 992px){
-    .card-wrapper{
-        border: none;
-        height: 400px;
+/* "Small" laptops, minimum 14 inches */
+@media screen and (min-width: 1200px) {
+    .project_card{
+        width: 80vw;
+
+        box-shadow: 15px 15px 10px rgb(20, 20, 20);
+        height: 380px;
     }
 
-    .card-description{
-        height: 80%;
-        border: var(--primary) 2px solid;
-        transition: 0.3s;
-    }
-   
-    .card-description > .project-link > a:hover{
-        transform: translateY(-5px);
-        background-color: var(--primary-transparent);
+    .project_card_picture_left{
+        grid-template-columns: 55% auto;
+        grid-template-areas: "picture description";
     }
 
+    .project_card_picture_right{
+        grid-template-columns: auto 55%;
+        grid-template-areas: "description picture";
+    }
+
+    .project_card_picture_left > .project_description_div{
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+    }
+
+    .project_card_picture_right > .project_description_div{
+        border-bottom-left-radius: 15px;
+        border-top-left-radius: 15px;
+    }
+
+    .project_card > .project_description_div > .project_title_wrapper > .project_title > .project_title_text{
+        font-size: 35px;
+        padding: 0px 20px;
+    }
+
+    .project_card > .project_description_div > .project_title_wrapper > .project_links_wrapper{
+        width: 25%;
+        padding: 0px 15px;
+    }
+
+    .project_card > .project_description_div > .project_title_wrapper > .project_links_wrapper > a > .project_link{
+        font-size: 30px;   
+        /* border: 2px yellow solid;  */
+    }
+
+    .project_card > .project_description_div{
+        grid-template-rows: 15% 70% auto;
+    }
+
+    .project_card > .project_description_div > .project_description{
+        font-size: 20px;
+    }
+
+    .project_card > .project_description_div > .tech_stack_wrapper > .tech_stack{
+        overflow-x: scroll;
+        font-size: 20px;
+        font-weight: normal;
+    }
+
+    .project_card:hover{
+        transform: translateY(-10px);
+        box-shadow: 15px 15px 10px var(--primary);
+    }
 }
 
-@media only screen and (min-width: 1300px){
-    .card-wrapper{
-        margin-bottom: 200px;
+/* Larger laptops and monitors. */
+@media screen and (min-width: 1600px) {
+    .project_card{
+        height: 500px;
+        margin-bottom: 100px;
     }
 
-    .card-description > .project-technologies{
-        gap: 20px;
+    .project_card > .project_description_div > .project_title_wrapper > .project_title{
+        padding: 5px 10px;
     }
 
-    .card-description > .project-header > p{
-        font-size: 40px;
+    .project_card > .project_description_div > .project_title_wrapper > .project_title > .project_title_text{
+        font-size: 50px;
     }
 
-    .card-description > .project-description > p, .stack, .project-technologies{
+    .project_card > .project_description_div > .tech_stack_wrapper > .tech_stack{
+        font-size: 30px;
+        font-weight: normal;
+    }
+
+    .project_card > .project_description_div > .project_description{
         font-size: 25px;
     }
 
-    .card-description > .project-link > a{
-        font-size: 25px;
-        border: 4px solid var(--primary);
+    .project_card > .project_description_div > .project_title_wrapper > .project_links_wrapper{
+        width: 25%;
+        padding: 5px 25px;
+    }
+
+    .project_card > .project_description_div > .project_title_wrapper > .project_links_wrapper > a > .project_link{
+        font-size: 50px;   
     }
 }
